Version 0.44.0 (In Progress)

  * fixed missing final update notification when file ownership/permissions changed
  * initconfig utility now includes example networking config file
  * use environment perl path in favor of hard-coded path
  * update help to indicate initconfig option
  * bug fix in error handling for initconfig utility

Version 0.43.0 (03 January 2014)

  * expanded INSTALL directions
  * new initialization utility "initconfig" provided, see INSTALL for more details
  * addition of "losf addalias" option to register custom package alias for installation
  * additional option added to showalias allowing expansion of alias membership
  * enhanced ability to create directory with no contents (e.g. a file
    system mount point). To have LosF create an empty directory, add
    the desired directory path into the [Permissions] config section
    and include a trailing slash "/" on the directory path. 
  * require user to provide a valid configuration path (set via
    LOSF_CONFIG_DIR environment variable or config/config_dir file)
  * added -v options to losf and update command-line utilities to provide versioning info
  * addition of "losf sync" command which synchronizes host provisioning config with Cobbler
  * addition of "losf reinsert [host]" (a convenience command to perform del/add combinations)
  * example LosF config files moved to config/config_example/ directory
  * transitioned SCM from subversion to git; migrated to GitHub

Version 0.42.0  (12 December 2013)

  * add option to disable update on specific host (via /root/losf-noupdate file)
  * add input file option to provide system-specific configuration
    option (config_dir); the global value can also be customized on a
    per-host basis using regular expressions
  * add auto-configuration of Custom package removal when upgrading a multi-install package
  * changed order of operations for update utility - all packages