@@ -1,5 +1,4 @@
 # -*-sh-*-
-# $Id: config.machines 1951 2013-12-11 02:38:40Z karl $
 
 #-----------------------------------------------
 # Cluster Definitions
@@ -32,7 +31,7 @@ domainname = yourdomain.org
 
 # Define unique node types via hostname regular expressions
 
-default = default
+master = default
 
 # Define location to store RPM packages 
 
