@@ -2,6 +2,7 @@ Version 0.44.0 (In Progress)
 
   * fixed missing final update notification when file ownership/permissions changed
   * initconfig utility now includes example networking config file
+  * initconfig updated to create const_files/ path for default node type
   * use environment perl path in favor of hard-coded path
   * update help to indicate initconfig option
   * bug fix in error handling for initconfig utility
